--- a/src/styles/base/colors.scss
+++ b/src/styles/base/colors.scss
@@ -1,1 +1,10 @@
 // COLOR VARIABLES
+$background:#E5E5E5;
+$blue: #1D9BF0;
+$grey:#8692A6;
+$white: #FFFFFF;
+$greyscale-black: #14142B;
+$grey-43:rgba(0, 0, 0, 0.43);
+$grey-49: rgba(0, 0, 0, 0.49);
+$black:rgba(0, 0, 0, 0.8);
+$border:#D9DBE9;
