--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,10 @@
 //BASE STYLES
-@import "./base/app.scss";
 @import "./base/colors.scss";
+@import "./base/app.scss";
 @import "./base/variables.scss";
 @import "./base/media.scss";
 
 //COMPONENTS
+@import "./sidebar.scss";
 
 //PAGES
