created card component and installed axios

--- a/src/styles/base/colors.scss
+++ b/src/styles/base/colors.scss
@@ -2,6 +2,7 @@
 $background:#E5E5E5;
 $blue: #1D9BF0;
 $grey:#8692A6;
+$grey-2:#BBBBBB;
 $white: #FFFFFF;
 $greyscale-black: #14142B;
 $grey-43:rgba(0, 0, 0, 0.43);
