--- a/src/styles/base/app.scss
+++ b/src/styles/base/app.scss
@@ -29,11 +29,14 @@ h1, li{
   font-weight: 700;
 }
 
+h2,h3, button{
+  font-family: 'Public Sans', sans-serif;
+}
+
 button {
   border: none;
   background: none;
   cursor: pointer;
-  font-family:inherit;
 }
 
 .flex-ac-jb {
@@ -56,6 +59,7 @@ button {
 .container {
   max-width: 1500px;
   width: 100%;
+  padding: 7rem 3rem;
   margin-left: auto;
   margin-right: auto;  
 }
