--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,6 +1,7 @@
 .sidebar{
-    border-right: 1px solid #D9DBE9;
     position: sticky;
+    top: 0;
+    border-right: 1px solid #D9DBE9;
     width: fit-content;
     height: 100vh;
     padding: 1.875rem 5.2rem 0 3.375rem;
