--- a/src/styles/base/app.scss
+++ b/src/styles/base/app.scss
@@ -29,7 +29,7 @@ h1, li{
   font-weight: 700;
 }
 
-h2,h3, button{
+h2,h3, h4, button{
   font-family: 'Public Sans', sans-serif;
 }
 
@@ -58,7 +58,7 @@ button {
 
 .container {
   max-width: 1500px;
-  width: 100%;
+  // width: 100%;
   padding: 7rem 3rem;
   margin-left: auto;
   margin-right: auto;  
