made cards responsive on smaller sccreens

--- a/src/styles/base/app.scss
+++ b/src/styles/base/app.scss
@@ -57,11 +57,12 @@ button {
 }
 
 .container {
-  max-width: 1500px;
-  // width: 100%;
+  max-width: 1200px;
+  // width: 90%;
   padding: 7rem 3rem;
   margin-left: auto;
   margin-right: auto;  
+  position: relative;
 }
 
 .layout{
