--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -1,8 +1,9 @@
 .cards{
     margin-top: 4.5rem;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat( auto-fit, minmax(238px, 1fr) );
     gap: 1.125rem;
+    // place-items: center;
     .card{
         width: 238px;
         height: 224px;
