--- a/src/styles/base/app.scss
+++ b/src/styles/base/app.scss
@@ -58,11 +58,18 @@ button {
 
 .container {
   max-width: 1200px;
-  // width: 90%;
-  padding: 7rem 3rem;
+  width: 100%;
+  padding: 6rem 3rem;
   margin-left: auto;
   margin-right: auto;  
   position: relative;
+
+  @include media("<=480px"){
+    padding: 6rem 1rem;
+    h1{
+      font-size: 1.5rem;
+    }
+  }
 }
 
 .layout{
