--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -12,7 +12,7 @@
         position: relative;
         .header{
             padding: 0.3rem 0.3rem;
-            width: 237px;
+            width: 100%;
             height: 139px;
             border-radius: 10px;
             object-fit: cover;
@@ -57,6 +57,9 @@
         &--footer{
             @extend .flex-ac-jb;
             padding: 0.5rem 0.7rem;
+        }
+        @include media("<=480"){
+            width: 100%;
         }
     }
 }
