--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -9,6 +9,9 @@
         span{
             color: $blue;
         }
+        &.mobile{
+            display: none;
+        }
     }
     &--links{
         margin-left: -2.3rem;
@@ -54,6 +57,27 @@
                     left: -3.5rem;
                     border-radius: 5px;
                     transition: all 0.3s linear;
+                }
+            }
+        }
+    }
+
+    @include media("<=890px"){
+        padding-left: 1.2rem;
+        padding-right: 1.2rem;
+        h1{
+            display: none;
+            &.mobile{
+                display: unset !important;
+            }
+        }
+        &--links{
+            li{
+                span{
+                    display: none;
+                }
+                &::after{
+                    left: -1.5rem;
                 }
             }
         }
