--- a/src/styles/base/app.scss
+++ b/src/styles/base/app.scss
@@ -59,13 +59,14 @@ button {
 .container {
   max-width: 1200px;
   width: 100%;
+  min-height: 95vh;
   padding: 6rem 3rem;
   margin-left: auto;
   margin-right: auto;  
   position: relative;
 
   @include media("<=480px"){
-    padding: 6rem 1rem;
+    padding: 3rem 2rem 6rem;
     h1{
       font-size: 1.5rem;
     }
@@ -74,6 +75,19 @@ button {
 
 .layout{
   display: flex;
+  .menu{
+    display: none;
+    position: sticky;
+    top: 1rem;
+    left: 1rem;
+    z-index: 9;
+  }
+  @include media("<=860px"){
+    display: unset;
+    .menu{
+      display: unset !important;
+    }
+  }
 }
 
 .text-align{
