--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -34,6 +34,7 @@
         scrollbar-width: none;  
         position: absolute;
         bottom: 3rem;
+        right: 0;
         article{
             @extend .flex-ac;
             gap: 0.75rem;
